# electricity-usage-prediction-web-app

./: .gitattributes  README.md  alpha_df.pickle  lr_model_full_features.pickle  lr_model_num_features.pickle  lr_model_regularized.pickle  lr_model_regularized_full.pickle  notebook.py  pyproject.toml  steel_industry_energy_consumption.csv  steel_industry_energy_consumption.ipynb  streamlit_app.py  ⚡_Main.py
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: steel_industry_energy_consumption-checkpoint.ipynb
pages/: 1_🔎_Explore_Data.py  2_🔩_Implementation.py  3_📈_Prediction.py
