[project]
name = "electricity-usage-prediction-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.10.9",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
]
